main: test commit with rgb-color change

--- a/src/index.scss
+++ b/src/index.scss
@@ -46,7 +46,7 @@ body {
     margin-bottom: 2rem;
     &-input {
       margin-right: 0.5rem;
-      background: #e0e1e2;
+      background: rgb(224, 225, 226);
       border-radius: 0.1rem;
     }
   }
